# dollarlord

./: .env.example  .gitignore  README.md  config.example.yaml  config.local.yaml  config.london.yaml  config.run.yaml  config.smoke.yaml  config.yaml  more_data_source.md  pyproject.toml
.cursor/plans/: web_dashboard_ui_2a5d87ce.plan.md
deploy/: healthcheck.sh  install.sh  logrotate.conf  polymarket-arb.service
docs/: LOCAL_MIGRATION.zh.md  USER_GUIDE.zh.md
scripts/: clear_history.sh  coverage_test.py  live_entry_backtest.py  live_roundtrip_test.py  start_bot.sh  stop_bot.sh
src/: __init__.py  __main__.py  config.py  health.py  logging_setup.py  main.py
src/dashboard/: __init__.py  bus.py  hub.py  log_handler.py  server.py
src/dashboard/static/: app.js  index.html  style.css
src/engine/: __init__.py  final_snipe.py  football_live_entry.py  kickoff_align.py  ladder_executor.py  risk.py  signals.py
src/matcher/: __init__.py  reverse_matcher.py
src/net/: __init__.py  proxy.py  rate_limit.py
src/pm/: __init__.py  clob_ws.py  gamma_sync.py  redeem.py
src/sports/: __init__.py  aggregator.py  api_football.py  balldontlie.py  base.py  espn_nba.py  espn_nfl.py  espn_soccer.py  football_data.py  lolesports_api.py  mlb_statsapi.py  nba_api_provider.py  nhl_api.py  openligadb.py  pandascore.py  thesportsdb.py
src/store/: __init__.py  sqlite.py
tests/: test_final_snipe.py  test_football_live_entry.py  test_gamma_esports.py
